# rust-bac

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.github/workflows/: ci.yml
crates/rustbac-bacnet-sc/: Cargo.toml
crates/rustbac-bacnet-sc/src/: lib.rs
crates/rustbac-client/: Cargo.toml
crates/rustbac-client/examples/: discover_devices.rs  read_property.rs
crates/rustbac-client/src/: alarm.rs  client.rs  cov.rs  cov_manager.rs  discovery.rs  error.rs  file.rs  lib.rs  listener.rs  point.rs  range.rs  schedule.rs  server.rs  simulator.rs  throttle.rs  value.rs  walk.rs
crates/rustbac-client/tests/: client_integration.rs
crates/rustbac-core/: Cargo.toml
crates/rustbac-core/src/: error.rs  lib.rs  npdu.rs
crates/rustbac-core/src/apdu/: confirmed.rs  mod.rs  pdu.rs  unconfirmed.rs
crates/rustbac-core/src/encoding/: mod.rs  primitives.rs  reader.rs  tag.rs  writer.rs
crates/rustbac-core/src/services/: acknowledge_alarm.rs  alarm_summary.rs  atomic_read_file.rs  atomic_write_file.rs  cov_notification.rs  device_management.rs  enrollment_summary.rs  event_information.rs  event_notification.rs  i_am.rs  list_element.rs  mod.rs  object_management.rs  private_transfer.rs  read_property.rs  read_property_multiple.rs  read_range.rs  subscribe_cov.rs  subscribe_cov_property.rs  time_synchronization.rs  value_codec.rs  who_has.rs  who_is.rs  write_property.rs  write_property_multiple.rs
crates/rustbac-core/src/types/: bit_string.rs  data_value.rs  date_time.rs  mod.rs  object_id.rs  object_type.rs  property_id.rs  spec.rs
crates/rustbac-core/tests/: golden_corpus.rs  golden_packets.rs
crates/rustbac-datalink/: Cargo.toml
crates/rustbac-datalink/src/: address.rs  capture.rs  lib.rs  traits.rs
crates/rustbac-datalink/src/bip/: bvlc.rs  mod.rs  transport.rs
crates/rustbac-mstp/: Cargo.toml
crates/rustbac-mstp/src/: crc.rs  frame.rs  lib.rs  transport.rs
crates/rustbac-tools/: Cargo.toml
crates/rustbac-tools/src/: lib.rs
docs/: BIBBS.md  INTEROP_MATRIX.md  INTEROP_RESULTS.md  INTEROP_RESULTS_LIVE.md  INTEROP_RUNBOOK.md
fixtures/golden/: README.md  readprop_device_name.hex  whois_global.hex
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_apdu_confirmed_decode.rs  fuzz_bvlc_decode.rs  fuzz_npdu_decode.rs  fuzz_service_decode.rs
scripts/: run_interop_matrix.sh  run_live_interop.sh
