[package]
name = "rustbac-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-level async BACnet client API for rustbac."
repository = "https://github.com/rbhans/rust-bac"

[features]
serde = ["dep:serde", "rustbac-core/serde", "rustbac-datalink/serde"]
tracing = ["dep:tracing"]

[dependencies]
rustbac-core = { path = "../rustbac-core", version = "0.3.2" }
rustbac-datalink = { path = "../rustbac-datalink", version = "0.3.2" }
rustbac-bacnet-sc = { path = "../rustbac-bacnet-sc", version = "0.3.2" }
thiserror.workspace = true
tokio.workspace = true
log.workspace = true
serde = { workspace = true, optional = true, features = ["std"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
env_logger.workspace = true
