[package]
name = "rustbac-datalink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BACnet data-link transports and traits for rustbac."
repository = "https://github.com/rbhans/rust-bac"
readme = "../../README.md"

[dependencies]
rustbac-core = { path = "../rustbac-core", version = "0.1.1" }
thiserror.workspace = true
tokio.workspace = true
log.workspace = true
