[package]
name = "rustbac-mstp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BACnet MS/TP data link layer over RS-485 serial"
repository = "https://github.com/rbhans/rust-bac"

[dependencies]
rustbac-datalink = { path = "../rustbac-datalink", version = "0.3.2" }
tokio = { version = "1", features = ["rt", "time", "sync", "io-util"] }
tokio-serial = "5"
log = "0.4"
