[package]
name = "rustbac-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line BACnet tools built on rustbac."
repository = "https://github.com/rbhans/rust-bac"

[dependencies]
rustbac-client = { path = "../rustbac-client", version = "0.1.0", features = ["serde"] }
rustbac-core = { path = "../rustbac-core", version = "0.1.0", features = ["serde"] }
rustbac-datalink = { path = "../rustbac-datalink", version = "0.1.0", features = ["serde"] }
clap.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde_json.workspace = true
